# tesseract

./: .gitignore  Cargo.toml  README.md  authentication_flow.odg  entity_component_system.odg  rustfmt.toml  session_api.yaml
.cargo/: config.toml
.github/workflows/: release.yml
examples/: basic.rs  physics.rs  sandbox.rs  ta_physics.rs
nbt/: Cargo.toml
nbt/src/: de.rs  error.rs  lib.rs  ser.rs
plugins/bedrock/protocol/: Cargo.toml
plugins/java/: Cargo.toml
plugins/java/protocol/: Cargo.toml
plugins/java/protocol/src/: codec.rs  lib.rs
plugins/java/protocol/src/packet/c2s/: game.rs  handshake.rs  login.rs  mod.rs
plugins/java/protocol/src/packet/s2c/: game.rs  login.rs  status.rs
plugins/java/protocol/src/types/: bit_storage.rs  chat.rs  entity_data.rs  mod.rs  paletted_container.rs
plugins/java/savegame/: Cargo.toml
plugins/java/savegame/src/: entity.rs  level.rs  lib.rs  region.rs
plugins/java/session_api/: README.md
plugins/java/session_api/docs/: DefaultApi.md  Error.md  JoinServerRequest.md  User.md  UserProperty.md
plugins/java/session_api/src/apis/: default_api.rs  mod.rs
plugins/java/session_api/src/models/: join_server_request.rs  mod.rs  user.rs
plugins/java/src/: lib.rs  persistence.rs  registry.rs  replication.rs
plugins/physics/: Cargo.toml
plugins/physics/src/: lib.rs
plugins/ta_physics/: Cargo.toml
plugins/ta_physics/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: bit_storage.rs  codec.rs  lib.rs  paletted_container.rs  types.rs
protocol/src/packet/: game.rs  handshake.rs  login.rs  mod.rs  status.rs
protocol/src/packet/c2s/: game.rs  handshake.rs  login.rs  mod.rs  status.rs
protocol/src/packet/s2c/: game.rs  handshake.rs  login.rs  mod.rs  status.rs
protocol/src/types/: bit_storage.rs  chat.rs  entity_data.rs  mod.rs  paletted_container.rs
protocol_derive/: Cargo.toml
protocol_derive/src/: lib.rs
protocol_logger/: Cargo.toml
protocol_logger/src/: main.rs
savegame/: Cargo.toml
savegame/src/: chunk.rs  lib.rs  region.rs
serde_nbt/: Cargo.toml
serde_nbt/src/: de.rs  error.rs  lib.rs  ser.rs
session_api/: Cargo.toml  README.md
session_api/.openapi-generator/: FILES
session_api/docs/: DefaultApi.md  Error.md  JoinServerRequest.md  User.md  UserPropertiesInner.md  UserProperty.md
session_api/src/apis/: configuration.rs  default_api.rs
session_api/src/models/: error.rs  mod.rs  user.rs  user_properties_inner.rs  user_property.rs
src/: actor.rs  chunk.rs  connection.rs  hierarchy.rs  level.rs  lib.rs  main.rs  persistence.rs  registry.rs  replication.rs
src/actor/: connection.rs  mod.rs  player.rs
src/block/: mod.rs
src/chunk/: mod.rs
src/item/: mod.rs
src/level/: chunk.rs  mod.rs  replication.rs  terrain.rs
