[workspace]
members = [
    "nbt",
    "protocol",
    "protocol_derive",
    "protocol_logger",
    "savegame",
    "session_api",
]
resolver = "2"

[package]
name = "tesseract"
version = "0.0.0"
edition = "2021"
authors = ["Valpahee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/tesseract.git"
description = "An ECS-based Minecraft server written in Rust."

[dependencies]
anyhow = "1.0.69"
futures = "0.3.26"
num = "0.4.0"
serde = "1.0.152"
serde_json = "1.0.93"
serde-value = "0.7.0"
sha1 = "0.10.5"
mojang_session_api = { path = "session_api" }
rand = "0.8.5"
rsa = "0.8.1"
tesseract_nbt = { path = "nbt" }
tesseract_protocol = { path = "protocol" }
tesseract_savegame = { path = "savegame" }
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec"] }

[dependencies.bevy]
#git = "https://github.com/valaphee/bevy.git"
path = "../bevy"
default-features = false
features = [
#    "trace_tracy"
]

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
