[workspace]
members = [
    "nbt",
    "protocol_derive",
    "plugins/java",
    "plugins/java/protocol",
    "plugins/java/savegame",
    "plugins/java/session_api",
    "plugins/ta_physics"
]
resolver = "2"

[package]
name = "tesseract_base"
version = "0.0.0"
edition = "2021"
authors = ["Valpahee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/tesseract.git"
description = "An ECS-based Minecraft server written in Rust."

[dependencies]
rand = "0.8.5"
tesseract_java_protocol = { path = "plugins/java/protocol" }
uuid = "1.3.0"

[dependencies.bevy]
git = "https://github.com/valaphee/bevy.git"
branch = "tesseract"
default-features = false

[dev-dependencies]
tesseract_java = { path = "plugins/java" }
tesseract_ta_physics = { path = "plugins/ta_physics" }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
