[package]
name = "tesseract_nbt"
version = "0.0.0"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/tesseract.git"
description = "Minecraft's NBT-file format support for serde"

[dependencies]
byteorder = "1.4.3"
num_enum = "0.5.11"
serde = "1.0.152"
thiserror = "1.0.38"
