[package]
name = "tesseract_protocol"
version = "0.0.0"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/tesseract.git"
description = "Minecraft's Protocol"

[dependencies]
anyhow = "1.0.69"
byteorder = "1.4.3"
tesseract_protocol_derive = { path = "../protocol_derive" }
tesseract_serde_nbt = { path = "../serde_nbt" }
thiserror = "1.0.38"
uuid = "1.3.0"
