[package]
name = "tesseract_protocol"
version = "0.0.0"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/tesseract.git"
description = "Minecraft's Protocol"

[dependencies]
aes = "0.7.5"
anyhow = "1.0.69"
byteorder = "1.4.3"
bytes = "1.4.0"
cfb8 = "0.7.1"
flate2 = "1.0.25"
glam = "0.22.0"
num_enum = "0.5.11"
serde = "1.0.152"
serde_json = "1.0.93"
serde-value = "0.7.0"
tesseract_protocol_derive = { path = "../protocol_derive" }
tesseract_serde_nbt = { path = "../serde_nbt" }
tokio-util = { version = "0.7.7", features = ["codec"] }
thiserror = "1.0.38"
uuid = "1.3.0"

[dev-dependencies]
rand = "0.8.5"
