[package]
name = "tesseract_protocol_logger"
version = "0.0.0"
edition = "2021"
authors = ["Valpahee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/tesseract.git"
description = "Minecraft's Protocol"

[dependencies]
anyhow = "1.0.69"
futures = "0.3.26"
serde = "1.0.152"
serde_json = "1.0.93"
rand = "0.8.5"
rsa = "0.8.1"
rsa-der = "0.3.0"
tesseract_protocol = { path = "../protocol" }
tesseract_serde_nbt = { path = "../serde_nbt" }
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
uuid = "1.3.0"
