[package]
name = "tesseract_protocol_logger"
version = "0.0.0"
edition = "2021"
authors = ["Valpahee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/tesseract.git"
description = "Minecraft's Protocol"

[dependencies]
futures = "0.3.26"
serde = "1.0.152"
serde_json = "1.0.93"
sha1 = "0.10.5"
mojang_session_api = { path = "../session_api" }
num = "0.4.0"
rand = "0.8.5"
rsa = "0.8.1"
tesseract_nbt = { path = "../nbt" }
tesseract_protocol = { path = "../protocol" }
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
uuid = { version = "1.3.0", features = ["v4"] }
