[package]
name = "tesseract_serde_nbt"
version = "0.0.0"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/tesseract.git"
description = "Minecraft's NBT-file format support for serde"

[dependencies]
anyhow = "1.0.69"
byteorder = "1.4.3"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
