[package]
name = "tesseract_physics"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/valaphee/tesseract.git"
description = "Tesseract Physics"

[dependencies]
rand = "0.8.5"
tesseract_base = { path = "../.." }

[dependencies.bevy]
git = "https://github.com/valaphee/bevy.git"
branch = "tesseract"
default-features = false
