[package]
name = "tesseract_java_protocol"
version = "0.0.0"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/tesseract.git"
description = "Minecraft's Protocol"

[dependencies]
aes = "0.8.2"
byteorder = "1.4.3"
bytes = "1.4.0"
cfb8 = "0.8.1"
flate2 = "1.0.25"
glam = "0.23.0"
mojang_session_api = { path = "../session_api" }
num_enum = "0.5.11"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde-value = "0.7.0"
tesseract_nbt = { path = "../../../nbt" }
tesseract_protocol_derive = { path = "../../../protocol_derive" }
thiserror = "1.0.38"
tokio-util = { version = "0.7.7", features = ["codec"] }
uuid = "1.3.0"

[dev-dependencies]
rand = "0.8.5"
