[package]
name = "tesseract_java_savegame"
version = "0.0.0"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/tesseract.git"
description = "Minecraft's Savegame"

[dependencies]
byteorder = "1.4.3"
flate2 = "1.0.25"
glam = "0.23.0"
serde = { version = "1.0.152", features = ["derive"] }
